src/Components/Main/Question/QuestionTypes/MultipleChoice.css
/* ! To manipulate material UI components sometimes a !important is required */
/* ! Some css properties (mui-checkcolor, color) are defined in the react component  */

.question-multiple-choice .formControlLabel{
  width: 100% !important;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.question-multiple-choice .formControlLabel > .formControlLabel-label{
  font-size: 18px;
  padding-top: 10px;
  padding-left: 2px;
}

.question-multiple-choice .formControlLabel > .formControlLabel-radio:hover{ 
  background-color: rgba(90, 90, 245, 0.06);
}

.question-multiple-choice .MuiSvgIcon-root{
  font-size: 26px;
}

.question-multiple-choice .label-disabled{
  color: grey;
}

.correction-multipleChoice-list-item {
  list-style: none;
  position: relative;
  padding-left: 14px;
}

.correction-multipleChoice-list-item::before {
  content: '•';
  position: absolute;
  left: 0px;
  top: -5px;
  bottom: 0;
  font-weight: 900;
  font-size: 24px;
}

/* Style the image that can be set with MarkDown */
.question-multiple-choice .formControlLabel p img{
  display: block;
  font-size: 1rem;
  object-fit: contain;
  object-position: left center;
  width: 100%;
  max-width: 550px;
  max-height: 300px;
}

/* Media Query for phones */
@media only screen and (max-width: 650px) { 
  .question-multiple-choice .formControlLabel{ 
    padding: 2px 0 !important;
  }

  /* Override the checkbox size of mui */
  .question-multiple-choice .MuiSvgIcon-root{
    font-size: 30px !important;
  }

  .question-multiple-choice .formControlLabel > .formControlLabel-label{
    font-size: 18px;
    padding-top: 10px;
    padding-left: 0;
  }

  .question-multiple-choice .formControlLabel > .formControlLabel-radio:hover{ 
    background-color: transparent;
  }
}

